# gemini_agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  response.md  run.sh
.build/: Dockerfile  create_new_repo.sh  pyproject.toml  requirements.in  run.sh  setup_github.sh  update_gemini_context.sh
.build/context/: .env.sample  docker-compose.yml  run.sh
.build/context/.devcontainer/: devcontainer.json
.gemini/: GEMINI.md
.gemini/AGENTS/: BACKENDCODER.md  CODER.md  FRONTENDCODER.md  JOURNAL_ASISTANT.md  RESEARCHER.md  SYSTEM_ARCHITECT.md  TECHNICAL_DESIGNER.md
.gemini/AGENTS/jp/: BACKENDCODER.md  CODER.md  MARKET_RESEARCHER.md  PEST_ANALYST.md  PRODUCT_MANAGER.md  STRATEGIST.md  SYSTEM_ARCHITECT.md  UIUX_DESIGNER.md
.gemini/skills/active-reconnaissance/: SKILL.md
.gemini/skills/adr-creation/: SKILL.md
.gemini/skills/adr-drafting/: SKILL.md
.gemini/skills/analyzing-github-reviews/: SKILL.md
.gemini/skills/arch-creation/: SKILL.md
.gemini/skills/arch-planning/: SKILL.md
.gemini/skills/arch-planning-review/: SKILL.md
.gemini/skills/auditing-architecture/: SKILL.md
.gemini/skills/auditing-tdd/: SKILL.md
.gemini/skills/bootstrapping-skills/: SKILL.md
.gemini/skills/context-creation/: SKILL.md
.gemini/skills/context-diagram/: SKILL.md
.gemini/skills/context-review/: SKILL.md
.gemini/skills/defining-adr/: SKILL.md
.gemini/skills/defining-design-doc/: SKILL.md
.gemini/skills/defining-system-context/: SKILL.md
.gemini/skills/defining-work-goals/: SKILL.md
.gemini/skills/design-doc-creation/: SKILL.md
.gemini/skills/domain-modeling/: SKILL.md
.gemini/skills/drafting-adr/: SKILL.md
.gemini/skills/drafting-architecture/: SKILL.md
.gemini/skills/drafting-design-doc/: SKILL.md
.gemini/skills/drafting-issues/: SKILL.md
.gemini/skills/drafting-specs/: SKILL.md
.gemini/skills/drafting-system-context/: SKILL.md
.gemini/skills/formulating-objectives/: SKILL.md
.gemini/skills/github-branch-strategy/: SKILL.md
.gemini/skills/github-pull-request/: SKILL.md
.gemini/skills/github-review-analysis/: SKILL.md
.gemini/skills/implementing-python-tdd/: SKILL.md
.gemini/skills/issue-drafting/: SKILL.md
.gemini/skills/managing-pull-requests/: SKILL.md
.gemini/skills/objective-analysis/: SKILL.md
.gemini/skills/objective-setting/: SKILL.md
.gemini/skills/planning-architecture/: SKILL.md
.gemini/tmp/: review_analysis_report.md
.github/: issue-kit-config.json
.github/workflows/: gemini-handler.yml  gemini-reviewer.yml  sync-config.yml
docs/: system-context.md
docs/architecture/: system-context.md
docs/guides/: coding-guidelines.md  development-setup.md
docs/handovers/: spec-to-tdd.md  tdd-to-final.md
docs/reviews/: issue-53-retrospective.md  pr-54-analysis.md  pr-54-retrospective.md  pr-55-analysis.md  pr-55-retrospective.md  pr-58-analysis.md  pr-58-retrospective.md  pr-67-analysis.md  pr-67-audit-ssot.md  pr-67-goal-definition.md  pr-67-goal-self-review.md
docs/specs/: spec-gemini-handler.md  spec-gemini-issue-handler.md
logs/: agent_id_20250820T142427.md
project/: sample_agent.py
project/.build/: requirements.in
src/: hello.py
src/issue_creator_kit/: cli.py
tests/: test_cli.py
tests/unit/: test_hello.py
(+86 files in other folders)
