# ===================================================================
# 1. プロジェクト固有設定 (新規プロジェクト作成時にここを編集)
# ===================================================================
[project]
name = "issue_creator_kit"
version = "0.1.0"
description = "Project with Issue Creator Kit automation."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="Your Name", email="your@email.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# --- プロジェクト固有の依存関係 ---
dependencies = [
    # ここにプロジェクト固有の依存関係を追加してください
]

# [project.scripts]
# プロジェクト名 = "パッケージ名.cli:main"

# ===================================================================
# 2. 共通開発環境設定 (標準的なツールセット)
# ===================================================================
[project.optional-dependencies]
# テスト用標準パッケージ
test = [
    "pytest",
    "pytest-cov",
    "httpx",
    "trio",
    "pytest-xdist",
]
# 開発用標準パッケージ (Core Trio: ruff, mypy, pytest)
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "types-PyYAML",
    "types-requests",
    "types-redis",
    "commitizen",
    "python-semantic-release",
    "build",
    # testの依存関係を明示
    "pytest",
    "pytest-cov",
    "httpx",
    "trio",
    "pytest-xdist",
]
# 特定のドメイン(ML等)用の設定 (必要に応じて)
ml = [
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

# ===================================================================
# 3. 共通ツール設定 (チーム標準の静的解析・テストルール)
# ===================================================================
# ★ ここから下はプロジェクトを跨いで原則共通。
# ★ 固有のパッケージ名に依存しない「抽象化」された設定。

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# --- setuptools (自動パッケージ検出) ---
[tool.setuptools.packages.find]
where = ["src", "."]
include = ["*"]
exclude = ["tests*"]

# --- Ruff (Linter & Formatter) ---
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "T20", "SIM", "RET", "ERA"
]
ignore = [
    "E501", "B008", "C901"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
# CLIツールはprint許可 (共通的な除外設定)
"**/cli.py" = ["T201"]

[tool.ruff.format]
# Black互換のフォーマット設定
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# --- Mypy (Type Checker) ---
[tool.mypy]
ignore_missing_imports = false
# パッケージ名ではなく、ディレクトリベースで指定
mypy_path = "src"
explicit_package_bases = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["punq", "frontmatter", "google.*"]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src", "."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]
# covに対象パッケージ名を書かず、srcディレクトリ全体を指定することで抽象化
addopts = "-v --tb=short --strict-markers --cov=src --cov-report=term-missing -n auto"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
junit_family = "xunit2"

